added RGB option, enhanced visuals, enter func

--- a/index.html
+++ b/index.html
@@ -11,8 +11,14 @@
 <body>
     <div id="main-box">
         <div id="left">
-            <input id="inputAmount" value="16" autocomplete="off" type="number">
-            <button id="reset">Restart</button>
+            <p id="Etch">Etch a Sketch!</p>
+            <div class="btns">
+                <input id="inputAmount" placeholder="16" autocomplete="off" type="number">
+                <div class="btns">
+                    <button id="button-reset">Restart</button>
+                    <button id="button-RGB">RGB</button>
+                </div>
+            </div>
         </div>
         <div id="right">
             <div id="grid-box">
